Fix spacing 03-flex-header-2

--- a/foundations/flexbox/flex/03-flex-header-2/style.css
+++ b/foundations/flexbox/flex/03-flex-header-2/style.css
@@ -12,6 +12,9 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .profile-image {
@@ -45,4 +48,14 @@ a {
 
 ul {
   list-style-type: none;
+  align-self: left;
+  display: flex;
+}
+
+.right {
+  display: flex;
+}
+
+.left {
+  display: flex;
 }
